--- a/main.ipynb
+++ b/main.ipynb
@@ -1,36 +1,280 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-12-12T16:39:50.691359Z",
-     "start_time": "2025-12-12T16:39:32.272461Z"
+     "end_time": "2025-12-12T17:24:37.131762Z",
+     "start_time": "2025-12-12T17:24:25.340599Z"
     }
    },
+   "cell_type": "code",
    "source": [
-    "from datasets import load_dataset\n",
+    "import pandas as pd\n",
     "\n",
-    "ds = load_dataset(\"ruggsea/stanford-encyclopedia-of-philosophy_chat_multi_turn\")"
+    "df = pd.read_parquet(\"hf://datasets/ruggsea/stanford-encyclopedia-of-philosophy_chat_multi_turn/data/train-00000-of-00001.parquet\")"
    ],
+   "id": "ce3a685ebceef307",
+   "outputs": [],
+   "execution_count": 76
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-12T17:24:40.697132Z",
+     "start_time": "2025-12-12T17:24:40.694923Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df = df.head(50)",
+   "id": "177515ff32dbecb7",
+   "outputs": [],
+   "execution_count": 77
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-12T17:24:41.658049Z",
+     "start_time": "2025-12-12T17:24:41.650130Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df.head()",
+   "id": "d54716f1ea8c6a6c",
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Python_files\\zipf-law-for-information-theory\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Warning: You are sending unauthenticated requests to the HF Hub. Please set a HF_TOKEN to enable higher rate limits and faster downloads.\n",
-      "C:\\Python_files\\zipf-law-for-information-theory\\.venv\\Lib\\site-packages\\huggingface_hub\\file_download.py:130: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\quiz0\\.cache\\huggingface\\hub\\datasets--ruggsea--stanford-encyclopedia-of-philosophy_chat_multi_turn. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
-      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
-      "  warnings.warn(message)\n",
-      "Generating train split: 100%|██████████| 11904/11904 [00:00<00:00, 145433.72 examples/s]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "                                        conversation  \\\n",
+       "0  [{'content': 'Professor, I was thinking about ...   \n",
+       "1  [{'content': 'Professor Phil, do we always cho...   \n",
+       "2  [{'content': 'Professor Phil, I was reading th...   \n",
+       "3  [{'content': 'Professor Phil, I've been wonder...   \n",
+       "4  [{'content': 'Professor, I've been thinking ab...   \n",
+       "\n",
+       "                                              prompt  \n",
+       "0  You are an expert and well-read Philosophy pro...  \n",
+       "1  You are an expert and well-read Philosophy pro...  \n",
+       "2  You are an expert and well-read Philosophy pro...  \n",
+       "3  You are an expert and well-read Philosophy pro...  \n",
+       "4  You are an expert and well-read Philosophy pro...  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>conversation</th>\n",
+       "      <th>prompt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[{'content': 'Professor, I was thinking about ...</td>\n",
+       "      <td>You are an expert and well-read Philosophy pro...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[{'content': 'Professor Phil, do we always cho...</td>\n",
+       "      <td>You are an expert and well-read Philosophy pro...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[{'content': 'Professor Phil, I was reading th...</td>\n",
+       "      <td>You are an expert and well-read Philosophy pro...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[{'content': 'Professor Phil, I've been wonder...</td>\n",
+       "      <td>You are an expert and well-read Philosophy pro...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>[{'content': 'Professor, I've been thinking ab...</td>\n",
+       "      <td>You are an expert and well-read Philosophy pro...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "execution_count": 1
+   "execution_count": 78
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Preprocessing\n",
+    "- Divide data into:\n",
+    "    - Utterances of the professor\n",
+    "    - Utterances of the student\n",
+    "    - SEP content"
+   ],
+   "id": "a76cc5959c509549"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-12T17:24:43.975311Z",
+     "start_time": "2025-12-12T17:24:43.972497Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def extract_content(conversation: dict):\n",
+    "    professor = []\n",
+    "    user = []\n",
+    "    for turn in conversation:\n",
+    "        # print(turn)\n",
+    "        # print('-'*20)\n",
+    "        if turn['role'] == 'user':\n",
+    "            user.append(turn['content'])\n",
+    "        else:\n",
+    "            professor.append(turn['content'])\n",
+    "    return professor, user\n",
+    "\n"
+   ],
+   "id": "63c1e3a3f8e8a4d0",
+   "outputs": [],
+   "execution_count": 79
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-12T17:24:45.097695Z",
+     "start_time": "2025-12-12T17:24:45.088092Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df['professor'] = df['conversation'].apply(lambda x: extract_content(x)[0])\n",
+    "df['student'] = df['conversation'].apply(lambda x: extract_content(x)[1])\n",
+    "df.head()"
+   ],
+   "id": "32e3fb9a0753ec8",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                                        conversation  \\\n",
+       "0  [{'content': 'Professor, I was thinking about ...   \n",
+       "1  [{'content': 'Professor Phil, do we always cho...   \n",
+       "2  [{'content': 'Professor Phil, I was reading th...   \n",
+       "3  [{'content': 'Professor Phil, I've been wonder...   \n",
+       "4  [{'content': 'Professor, I've been thinking ab...   \n",
+       "\n",
+       "                                              prompt  \\\n",
+       "0  You are an expert and well-read Philosophy pro...   \n",
+       "1  You are an expert and well-read Philosophy pro...   \n",
+       "2  You are an expert and well-read Philosophy pro...   \n",
+       "3  You are an expert and well-read Philosophy pro...   \n",
+       "4  You are an expert and well-read Philosophy pro...   \n",
+       "\n",
+       "                                           professor  \\\n",
+       "0  [That's a great question! You see, our brains ...   \n",
+       "1  [Well, my inquisitive student, that's a great ...   \n",
+       "2  [Ah, you're onto something. Think of a movie. ...   \n",
+       "3  [That's a great question. Think of it like thi...   \n",
+       "4  [That's an intriguing question. To explore thi...   \n",
+       "\n",
+       "                                             student  \n",
+       "0  [Professor, I was thinking about how I conclud...  \n",
+       "1  [Professor Phil, do we always choose the simpl...  \n",
+       "2  [Professor Phil, I was reading this book about...  \n",
+       "3  [Professor Phil, I've been wondering, how do w...  \n",
+       "4  [Professor, I've been thinking about abilities...  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>conversation</th>\n",
+       "      <th>prompt</th>\n",
+       "      <th>professor</th>\n",
+       "      <th>student</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[{'content': 'Professor, I was thinking about ...</td>\n",
+       "      <td>You are an expert and well-read Philosophy pro...</td>\n",
+       "      <td>[That's a great question! You see, our brains ...</td>\n",
+       "      <td>[Professor, I was thinking about how I conclud...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[{'content': 'Professor Phil, do we always cho...</td>\n",
+       "      <td>You are an expert and well-read Philosophy pro...</td>\n",
+       "      <td>[Well, my inquisitive student, that's a great ...</td>\n",
+       "      <td>[Professor Phil, do we always choose the simpl...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[{'content': 'Professor Phil, I was reading th...</td>\n",
+       "      <td>You are an expert and well-read Philosophy pro...</td>\n",
+       "      <td>[Ah, you're onto something. Think of a movie. ...</td>\n",
+       "      <td>[Professor Phil, I was reading this book about...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[{'content': 'Professor Phil, I've been wonder...</td>\n",
+       "      <td>You are an expert and well-read Philosophy pro...</td>\n",
+       "      <td>[That's a great question. Think of it like thi...</td>\n",
+       "      <td>[Professor Phil, I've been wondering, how do w...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>[{'content': 'Professor, I've been thinking ab...</td>\n",
+       "      <td>You are an expert and well-read Philosophy pro...</td>\n",
+       "      <td>[That's an intriguing question. To explore thi...</td>\n",
+       "      <td>[Professor, I've been thinking about abilities...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 80
   }
  ],
  "metadata": {
