--- a/main.ipynb
+++ b/main.ipynb
@@ -3,43 +3,52 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-12T17:24:37.131762Z",
-     "start_time": "2025-12-12T17:24:25.340599Z"
+     "end_time": "2025-12-12T20:31:52.051472Z",
+     "start_time": "2025-12-12T20:31:52.049295Z"
     }
    },
    "cell_type": "code",
    "source": [
     "import pandas as pd\n",
+    "import re\n",
     "\n",
-    "df = pd.read_parquet(\"hf://datasets/ruggsea/stanford-encyclopedia-of-philosophy_chat_multi_turn/data/train-00000-of-00001.parquet\")"
+    "from pandas.core.interchange.from_dataframe import primitive_column_to_ndarray"
+   ],
+   "id": "1840f386a732fdf8",
+   "outputs": [],
+   "execution_count": 7
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-12T21:18:29.904202Z",
+     "start_time": "2025-12-12T21:18:20.721888Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# load the dataset from HF\n",
+    "\n",
+    "df_full = pd.read_parquet(\"hf://datasets/ruggsea/stanford-encyclopedia-of-philosophy_chat_multi_turn/data/train-00000-of-00001.parquet\")"
    ],
    "id": "ce3a685ebceef307",
    "outputs": [],
-   "execution_count": 76
+   "execution_count": 64
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-12T17:24:40.697132Z",
-     "start_time": "2025-12-12T17:24:40.694923Z"
+     "end_time": "2025-12-12T21:34:28.911099Z",
+     "start_time": "2025-12-12T21:34:28.902479Z"
     }
    },
    "cell_type": "code",
-   "source": "df = df.head(50)",
+   "source": [
+    "# I recommend to work on mock dataset (50 first rows) for writing the code\n",
+    "df = df_full.head(5)\n",
+    "df.head()"
+   ],
    "id": "177515ff32dbecb7",
-   "outputs": [],
-   "execution_count": 77
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-12-12T17:24:41.658049Z",
-     "start_time": "2025-12-12T17:24:41.650130Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "df.head()",
-   "id": "d54716f1ea8c6a6c",
    "outputs": [
     {
      "data": {
@@ -112,12 +121,12 @@
        "</div>"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 78
+   "execution_count": 97
   },
   {
    "metadata": {},
@@ -134,8 +143,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-12T17:24:43.975311Z",
-     "start_time": "2025-12-12T17:24:43.972497Z"
+     "end_time": "2025-12-12T21:34:32.456231Z",
+     "start_time": "2025-12-12T21:34:32.453314Z"
     }
    },
    "cell_type": "code",
@@ -151,57 +160,140 @@
     "        else:\n",
     "            professor.append(turn['content'])\n",
     "    return professor, user\n",
-    "\n"
+    "\n",
+    "def prepare_prompt(prompt: str):\n",
+    "    return re.findall(r'\\\"([\\s\\S]+?)\\\"', prompt)\n"
    ],
    "id": "63c1e3a3f8e8a4d0",
    "outputs": [],
-   "execution_count": 79
+   "execution_count": 99
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-12T17:24:45.097695Z",
-     "start_time": "2025-12-12T17:24:45.088092Z"
+     "end_time": "2025-12-12T21:34:34.006389Z",
+     "start_time": "2025-12-12T21:34:34.002430Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "# Split the conversation into various rows in df\n",
     "df['professor'] = df['conversation'].apply(lambda x: extract_content(x)[0])\n",
     "df['student'] = df['conversation'].apply(lambda x: extract_content(x)[1])\n",
-    "df.head()"
+    "df['prompt'] = df['prompt'].apply(lambda x: prepare_prompt(x))"
    ],
    "id": "32e3fb9a0753ec8",
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\quiz0\\AppData\\Local\\Temp\\ipykernel_27332\\959540336.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df['professor'] = df['conversation'].apply(lambda x: extract_content(x)[0])\n",
+      "C:\\Users\\quiz0\\AppData\\Local\\Temp\\ipykernel_27332\\959540336.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df['student'] = df['conversation'].apply(lambda x: extract_content(x)[1])\n",
+      "C:\\Users\\quiz0\\AppData\\Local\\Temp\\ipykernel_27332\\959540336.py:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df['prompt'] = df['prompt'].apply(lambda x: prepare_prompt(x))\n"
+     ]
+    }
+   ],
+   "execution_count": 100
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-12T21:34:35.708928Z",
+     "start_time": "2025-12-12T21:34:35.706020Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df = df.drop('conversation', axis=1)",
+   "id": "781044d933a69cee",
+   "outputs": [],
+   "execution_count": 101
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-12T21:35:56.144418Z",
+     "start_time": "2025-12-12T21:35:56.138751Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df = df.explode([\"professor\", \"student\"]) # powerful line! creates pair of student question and professor answer in for each row\n",
+    "df.info()"
+   ],
+   "id": "d783beacda4c6d74",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 21 entries, 0 to 4\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column     Non-Null Count  Dtype \n",
+      "---  ------     --------------  ----- \n",
+      " 0   prompt     21 non-null     object\n",
+      " 1   professor  21 non-null     object\n",
+      " 2   student    21 non-null     object\n",
+      "dtypes: object(3)\n",
+      "memory usage: 672.0+ bytes\n"
+     ]
+    }
+   ],
+   "execution_count": 106
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-12T21:36:31.137892Z",
+     "start_time": "2025-12-12T21:36:31.132588Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Now data is clean!\n",
+    "df.head()"
+   ],
+   "id": "cd7b5ada62c9026",
+   "outputs": [
+    {
      "data": {
       "text/plain": [
-       "                                        conversation  \\\n",
-       "0  [{'content': 'Professor, I was thinking about ...   \n",
-       "1  [{'content': 'Professor Phil, do we always cho...   \n",
-       "2  [{'content': 'Professor Phil, I was reading th...   \n",
-       "3  [{'content': 'Professor Phil, I've been wonder...   \n",
-       "4  [{'content': 'Professor, I've been thinking ab...   \n",
-       "\n",
        "                                              prompt  \\\n",
-       "0  You are an expert and well-read Philosophy pro...   \n",
-       "1  You are an expert and well-read Philosophy pro...   \n",
-       "2  You are an expert and well-read Philosophy pro...   \n",
-       "3  You are an expert and well-read Philosophy pro...   \n",
-       "4  You are an expert and well-read Philosophy pro...   \n",
+       "0  [You happen to know that Tim and Harry have re...   \n",
+       "0  [You happen to know that Tim and Harry have re...   \n",
+       "0  [You happen to know that Tim and Harry have re...   \n",
+       "0  [You happen to know that Tim and Harry have re...   \n",
+       "1  [\\n Even if it is true that we routinely rely ...   \n",
        "\n",
        "                                           professor  \\\n",
-       "0  [That's a great question! You see, our brains ...   \n",
-       "1  [Well, my inquisitive student, that's a great ...   \n",
-       "2  [Ah, you're onto something. Think of a movie. ...   \n",
-       "3  [That's a great question. Think of it like thi...   \n",
-       "4  [That's an intriguing question. To explore thi...   \n",
+       "0  That's a great question! You see, our brains a...   \n",
+       "0  Of course, you could be wrong! But here's the ...   \n",
+       "0  Ah, great example! This is where the concept o...   \n",
+       "0  Exactly! Our minds are wired to seek patterns ...   \n",
+       "1  Well, my inquisitive student, that's a great q...   \n",
        "\n",
        "                                             student  \n",
-       "0  [Professor, I was thinking about how I conclud...  \n",
-       "1  [Professor Phil, do we always choose the simpl...  \n",
-       "2  [Professor Phil, I was reading this book about...  \n",
-       "3  [Professor Phil, I've been wondering, how do w...  \n",
-       "4  [Professor, I've been thinking about abilities...  "
+       "0  Professor, I was thinking about how I conclude...  \n",
+       "0  But isn't that just an assumption? I mean, I c...  \n",
+       "0  That makes sense, I guess. But what about case...  \n",
+       "0  Yeah, I think so. It's like, our brains are al...  \n",
+       "1  Professor Phil, do we always choose the simple...  "
       ],
       "text/html": [
        "<div>\n",
@@ -222,7 +314,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>conversation</th>\n",
        "      <th>prompt</th>\n",
        "      <th>professor</th>\n",
        "      <th>student</th>\n",
@@ -231,50 +322,45 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>[{'content': 'Professor, I was thinking about ...</td>\n",
-       "      <td>You are an expert and well-read Philosophy pro...</td>\n",
-       "      <td>[That's a great question! You see, our brains ...</td>\n",
-       "      <td>[Professor, I was thinking about how I conclud...</td>\n",
+       "      <td>[You happen to know that Tim and Harry have re...</td>\n",
+       "      <td>That's a great question! You see, our brains a...</td>\n",
+       "      <td>Professor, I was thinking about how I conclude...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[You happen to know that Tim and Harry have re...</td>\n",
+       "      <td>Of course, you could be wrong! But here's the ...</td>\n",
+       "      <td>But isn't that just an assumption? I mean, I c...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[You happen to know that Tim and Harry have re...</td>\n",
+       "      <td>Ah, great example! This is where the concept o...</td>\n",
+       "      <td>That makes sense, I guess. But what about case...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[You happen to know that Tim and Harry have re...</td>\n",
+       "      <td>Exactly! Our minds are wired to seek patterns ...</td>\n",
+       "      <td>Yeah, I think so. It's like, our brains are al...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>[{'content': 'Professor Phil, do we always cho...</td>\n",
-       "      <td>You are an expert and well-read Philosophy pro...</td>\n",
-       "      <td>[Well, my inquisitive student, that's a great ...</td>\n",
-       "      <td>[Professor Phil, do we always choose the simpl...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>[{'content': 'Professor Phil, I was reading th...</td>\n",
-       "      <td>You are an expert and well-read Philosophy pro...</td>\n",
-       "      <td>[Ah, you're onto something. Think of a movie. ...</td>\n",
-       "      <td>[Professor Phil, I was reading this book about...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>[{'content': 'Professor Phil, I've been wonder...</td>\n",
-       "      <td>You are an expert and well-read Philosophy pro...</td>\n",
-       "      <td>[That's a great question. Think of it like thi...</td>\n",
-       "      <td>[Professor Phil, I've been wondering, how do w...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>[{'content': 'Professor, I've been thinking ab...</td>\n",
-       "      <td>You are an expert and well-read Philosophy pro...</td>\n",
-       "      <td>[That's an intriguing question. To explore thi...</td>\n",
-       "      <td>[Professor, I've been thinking about abilities...</td>\n",
+       "      <td>[\\n Even if it is true that we routinely rely ...</td>\n",
+       "      <td>Well, my inquisitive student, that's a great q...</td>\n",
+       "      <td>Professor Phil, do we always choose the simple...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 80
+   "execution_count": 108
   }
  ],
  "metadata": {
