--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -12,8 +12,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-22T14:45:57.655410Z",
-     "start_time": "2025-12-22T14:45:57.653189Z"
+     "end_time": "2025-12-22T15:37:39.666215Z",
+     "start_time": "2025-12-22T15:37:39.664128Z"
     }
    },
    "cell_type": "code",
@@ -23,13 +23,13 @@
    ],
    "id": "1840f386a732fdf8",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-22T14:46:05.749893Z",
-     "start_time": "2025-12-22T14:45:57.670338Z"
+     "end_time": "2025-12-22T15:37:54.398343Z",
+     "start_time": "2025-12-22T15:37:39.777820Z"
     }
    },
    "cell_type": "code",
@@ -48,19 +48,19 @@
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-22T14:46:05.775076Z",
-     "start_time": "2025-12-22T14:46:05.765329Z"
+     "end_time": "2025-12-22T15:37:54.422652Z",
+     "start_time": "2025-12-22T15:37:54.412922Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# I recommend to work on mock dataset (50 first rows) for writing the code\n",
-    "df = df_full.head(5)\n",
+    "df = df_full.head(50)\n",
     "df.head()"
    ],
    "id": "177515ff32dbecb7",
@@ -136,18 +136,18 @@
        "</div>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 7
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-22T14:46:05.809291Z",
-     "start_time": "2025-12-22T14:46:05.806892Z"
+     "end_time": "2025-12-22T15:37:54.454853Z",
+     "start_time": "2025-12-22T15:37:54.452024Z"
     }
    },
    "cell_type": "code",
@@ -179,13 +179,13 @@
    ],
    "id": "63c1e3a3f8e8a4d0",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-22T14:46:05.844354Z",
-     "start_time": "2025-12-22T14:46:05.840282Z"
+     "end_time": "2025-12-22T15:37:54.499436Z",
+     "start_time": "2025-12-22T15:37:54.493981Z"
     }
    },
    "cell_type": "code",
@@ -206,19 +206,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\quiz0\\AppData\\Local\\Temp\\ipykernel_1792\\1562085957.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\quiz0\\AppData\\Local\\Temp\\ipykernel_24376\\1562085957.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df['professor'] = df['conversation'].apply(lambda x: extract_content(x)[0])\n",
-      "C:\\Users\\quiz0\\AppData\\Local\\Temp\\ipykernel_1792\\1562085957.py:6: SettingWithCopyWarning: \n",
+      "C:\\Users\\quiz0\\AppData\\Local\\Temp\\ipykernel_24376\\1562085957.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df['student'] = df['conversation'].apply(lambda x: extract_content(x)[1])\n",
-      "C:\\Users\\quiz0\\AppData\\Local\\Temp\\ipykernel_1792\\1562085957.py:9: SettingWithCopyWarning: \n",
+      "C:\\Users\\quiz0\\AppData\\Local\\Temp\\ipykernel_24376\\1562085957.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -227,26 +227,26 @@
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-22T14:46:05.863519Z",
-     "start_time": "2025-12-22T14:46:05.860208Z"
+     "end_time": "2025-12-22T15:37:54.517994Z",
+     "start_time": "2025-12-22T15:37:54.515730Z"
     }
    },
    "cell_type": "code",
    "source": "df = df.drop('conversation', axis=1)",
    "id": "781044d933a69cee",
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-22T14:46:05.894380Z",
-     "start_time": "2025-12-22T14:46:05.886907Z"
+     "end_time": "2025-12-22T15:37:54.535438Z",
+     "start_time": "2025-12-22T15:37:54.529271Z"
     }
    },
    "cell_type": "code",
@@ -261,25 +261,25 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 21 entries, 0 to 4\n",
+      "Index: 214 entries, 0 to 49\n",
       "Data columns (total 3 columns):\n",
       " #   Column     Non-Null Count  Dtype \n",
       "---  ------     --------------  ----- \n",
-      " 0   prompt     21 non-null     object\n",
-      " 1   professor  21 non-null     object\n",
-      " 2   student    21 non-null     object\n",
+      " 0   prompt     214 non-null    object\n",
+      " 1   professor  214 non-null    object\n",
+      " 2   student    214 non-null    object\n",
       "dtypes: object(3)\n",
-      "memory usage: 672.0+ bytes\n"
+      "memory usage: 6.7+ KB\n"
      ]
     }
    ],
-   "execution_count": 11
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-22T14:46:05.913590Z",
-     "start_time": "2025-12-22T14:46:05.903312Z"
+     "end_time": "2025-12-22T15:37:54.562840Z",
+     "start_time": "2025-12-22T15:37:54.540540Z"
     }
    },
    "cell_type": "code",
@@ -289,7 +289,7 @@
    ],
    "id": "cd7b5ada62c9026",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 8
   }
  ],
  "metadata": {
